fix: restore lost alignment style still relevant

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.picture.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.picture.css
@@ -2,6 +2,11 @@
 /* SEE: https://github.com/django-cms/djangocms-picture/blob/2.3.0/djangocms_picture/models.py#L24-L34 */
 @import url("@tacc/core-styles/src/lib/_imports/components/align.css");
 
+/* Allow anchor tag to wrap like a block but still behave inline */
+a:has(.img-fluid) {
+  display: inline-block;
+}
+
 /* Support centering originating from Core-Styles */
 /* FAQ: We set display in client, so Core-Styles does not assume display */
 /* SEE: https://github.com/TACC/Core-Styles/blob/dd2bbb0/src/lib/_imports/components/align.css#L16-L19 */
